@@ -1,5 +1,6 @@
 30.08.2025
 - dodana konwersja parametru procedury/funkcji INTEGER -> REAL
+- szybsza wersja 'FUNCTION SQRT(REAL): REAL' (unit SYSTEM)
 
 27.08.2025
 - bugfixes and optimizations
